// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render a large icon 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={true}
  isLarge={true}
  isSmall={false}
  isSpinning={false}
  isStacked={false}
  type="circle"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-circle fa-lg"
  >
    <span
      aria-hidden={true}
      className="fa fa-circle fa-lg c0"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render a non-FontAwesome icon 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={false}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={false}
  type="intelli-icon-avatar"
>
  <styled.span
    aria-hidden={true}
    className="fa intelli-icon-avatar"
  >
    <span
      aria-hidden={true}
      className="fa intelli-icon-avatar c0"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with colour 1`] = `
.c0 {
  color: #1A2B3C;
}

.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  color="#1A2B3C"
  isFontAwesome={true}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={false}
  type="check"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-check"
    color="#1A2B3C"
  >
    <span
      aria-hidden={true}
      className="fa fa-check c0"
      color="#1A2B3C"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with no size or colour 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={true}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={false}
  type="check"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-check"
  >
    <span
      aria-hidden={true}
      className="fa fa-check c0"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with no stack or size if only isStacked is given 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={true}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={true}
  type="check"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-check"
  >
    <span
      aria-hidden={true}
      className="fa fa-check c0"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with size 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={true}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={false}
  size={3}
  type="check"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-check fa-3x"
  >
    <span
      aria-hidden={true}
      className="fa fa-check fa-3x c0"
    />
  </styled.span>
</Icon>
`;

exports[`<Icon /> should render icon with stack and size 1`] = `
.c0.icon-small {
  bottom: 2px;
  font-size: xx-small;
  position: relative;
}

<Icon
  isFontAwesome={true}
  isLarge={false}
  isSmall={false}
  isSpinning={false}
  isStacked={true}
  size={2}
  type="check"
>
  <styled.span
    aria-hidden={true}
    className="fa fa-check fa-stack-2x"
  >
    <span
      aria-hidden={true}
      className="fa fa-check fa-stack-2x c0"
    />
  </styled.span>
</Icon>
`;
